...
      this.props.onNewGistTapped(this.props.navigator);
    }
  }

  render() {
    return (
      <ContainerView {...this.props} testID="gistsContainer">
        <SectionList
          renderItem={this.renderGist}
          renderSectionHeader={({ section }) => <SectionHeader title={section.key} />}
          sections={this.props.sections}
          ItemSeparatorComponent={SeparatorLine}
          onRefresh={() => this.props.fetchData(true)}
...
